Šis takā būtu teorētiski uz kāda feature/accounts zara, bet tā ir kā ir. ------------------------------------------------------------------------
Pārrakstīta kontu reģistrācija, lai viss notiktu caur pašiem kontiem un apstiprināšanām un nebūtu vairs atsevišķas datu struktūras: kontu pieteikumi.

Api punkti vēl jāsaraksta u.tt.

Ļoti starpkommits.
